frontend/src/styles-ordpool-overrides1.scss
$bitcoin: #FF9900;

$dark: #282828;
$light: #f8f9fa;
$primary: $bitcoin;
$secondary: #6c757d;
$tertiary: $bitcoin;
$success: #28a745;
$info: $bitcoin;
$warning: #ffc107;
$danger: #dc3545;
$light-gray: #e9ecef;
$dark-gray: #6c757d;

$enable-rounded: false;
$input-disabled-bg: $dark;


/* Theme */
$bg: #1d1f31;
$active-bg: #11131f;
$hover-bg: #12131e;
$fg: $light;
$nav-bg: $bg;
$title-fg: $bitcoin;


// HACK: more colors for ng-bootstrap modals + popover
// $bg is the same value as $body-bg and $gray-800 in the main styles.scss
$modal-content-color: $light;
$modal-content-bg: $bg;
$popover-body-color: $light;
$popover-bg: $bg;
$popover-border-color: $bg;

.bitcoin {
  color: $bitcoin;
}

// Workaround for https://github.com/ng-bootstrap/ng-bootstrap/issues/2686
// (modal not clickable)
ngb-modal-backdrop {
  z-index: 1050 !important;
}

body {
  min-width: 375px;
}

.pagination-container {
 background: none !important;
}

.btn-purple {
  box-shadow: none !important;
}

.form-control {
  background-color: #2d3348 !important; 
}

.form-control:focus {
  background-color: #2d3348 !important;
}

.navbar {
  background-color: black !important;
}

// "offline" connection badge
.connection-badge {
  position: fixed !important;
  width: inherit !important;
  padding-top: 42px;

}

.connection-badge ::before {
  content: "⚠️ ";
}
.connection-badge.mobile{
  right: 12pt;
  padding-top: 0;
}

// Bootstrap 5 renamed .close to .btn-close. The original shim is no longer needed.
// .btn-close {
//   @extend .close
// }
 
// removes the distracting badge from the blocks
app-blockchain-blocks .badge {
  background: none;
  border: none;
  font-weight: normal;
}

// why are these confirmations unclickable buttons??
app-confirmations button {
  background-color: transparent !important;
  border-width: 2px !important;
}

// hides the little x in the block title
.title-block button {
  display: none;
}

// fixes the whitepaces handling from style.scss line 707
app-runestone-viewer,
app-atomical-viewer {
  white-space: normal !important;
}

// moves app-block-filters out of the block overview
// no "gray" blocking anymore
.block-overview-graph {
  margin-top: 80px;
}

.block-filters {
  height: 80px !important;

  h5 {
    margin-top: 0 !important;
    margin-bottom: 4px !important;
  }
}

app-block-filters > div {
  margin-top: -80px;
}

// completely hide accelerated status (this is still shown for some txns)
.badge-accelerated {
  display: none !important;
}

// hide the toggle that switches between fees and size of the blocks
.block-display-toggle {
  display: none !important;
}

// hide the toggle that changes the time direction
.time-toggle {
  visibility: hidden !important;
}

